// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button render snapshot: default 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 2,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: disabled 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 19,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 10,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 20,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no className 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className={undefined}
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 15,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": undefined,
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 8,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 16,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className={undefined}
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no disabled 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 4,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no label 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
/>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label={undefined}
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 9,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": undefined,
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
/>,
        "_debugID": 10,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
/>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label={undefined}
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no modifier 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier={undefined}
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 11,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": undefined,
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 6,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 12,
        "_renderedOutput": <button
          className="btn btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier={undefined}
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no onClick 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 17,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 9,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 18,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no size 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size={undefined}
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 13,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": undefined,
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 7,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 14,
        "_renderedOutput": <button
          className="btn btn-primary className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size={undefined}
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no tabIndex 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 6,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;

exports[`Button render snapshot: no type 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <button
    className="btn btn-primary btn-sm className"
    disabled={false}
    onClick={[Function]}
    tabIndex={-1}
    type="button"
>
    label
</button>,
  "nodes": Array [
    <button
      className="btn btn-primary btn-sm className"
      disabled={false}
      onClick={[Function]}
      tabIndex={-1}
      type="button"
>
      label
</button>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 0,
      "_context": Object {},
      "_currentElement": <Button
        className="className"
        disabled={false}
        label="label"
        modifier="primary"
        onClick={[Function]}
        size="sm"
        tabIndex={-1}
        type="button"
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": Button {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "className": "className",
          "disabled": false,
          "label": "label",
          "modifier": "primary",
          "onClick": [Function],
          "size": "sm",
          "tabIndex": -1,
          "type": "button",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
        "_debugID": 8,
        "_renderedOutput": <button
          className="btn btn-primary btn-sm className"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
>
          label
</button>,
      },
      "_renderedNodeType": 0,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <Button
    className="className"
    disabled={false}
    label="label"
    modifier="primary"
    onClick={[Function]}
    size="sm"
    tabIndex={-1}
    type="button"
/>,
}
`;
